# azure-orphan-cleaner

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
azext_orphan_cleaner/: __init__.py  _help.py  _params.py  commands.py  custom.py
azext_resource_sweeper/: __init__.py  _help.py  _params.py  azext_metadata.json  commands.py  custom.py
terraform/: main.tf
tests/integration/: test_scan.py
tests/unit/: test_custom.py
